--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -29,22 +29,38 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
+
 <body>
 <div class="page-wrapper">
 
 
     <main class="main">
 
+    {% for message in messages %}
+        <div class="container-fluid p-0">
+            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="True">&times;</span>
+                </button>
+               <h4 style="text-align: center; vertical-align: middle;  color: white;">{{ message }}</h4>
+            </div>
+        </div>
+    {% endfor %}
+
+
         <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
              style="background-image: url('{% static 'images/backgrounds/login-bg.jpg' %}')">
             <div class="container">
                 <div class="form-box">
 
-                                <br>
-                                <br>
-                                <br>
+                    <br>
+                    <br>
+                    <br>
                     <div class="form-tab">
                         <ul class="nav nav-pills nav-fill" role="tablist">
+
+
+
 
                             <li class="nav-item">
                                 <a class="nav-link active" id="register-tab-2" data-toggle="tab" href=""
@@ -58,11 +74,13 @@
                                     {{ form.errors }}
 
                                     <label for="id_username">نام کاربری:</label>
-                                    <input type="text"  class="form-control"  name="username" maxlength="50" autofocus="" required="" id="id_username">
+                                    <input type="text" class="form-control" name="username" maxlength="50" autofocus=""
+                                           required="" id="id_username">
                                     <label for="id_email">ایمیل:</label>
-                                    <input type="email"  class="form-control" name="email" required="" id="id_email">
+                                    <input type="email" class="form-control" name="email" required="" id="id_email">
                                     <label for="id_password1">پسورد:</label>
-                                    <input type="password"    class="form-control" name="password1" autocomplete="new-password" required="" id="id_password1">
+                                    <input type="password" class="form-control" name="password1"
+                                           autocomplete="new-password" required="" id="id_password1">
 
                                     <div class="form-footer">
                                         <button type="submit" class="btn btn-outline-primary-2">
@@ -88,17 +106,17 @@
 
 
 </div><!-- End .page-wrapper -->
-    </div><!-- End .modal -->
+</div><!-- End .modal -->
 
-    <!-- Plugins JS File -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/jquery.hoverIntent.min.js' %}"></script>
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/superfish.min.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <!-- Main JS File -->
-    <script src="{% static 'js/main.js' %}"></script>
+<!-- Plugins JS File -->
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/jquery.hoverIntent.min.js' %}"></script>
+<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+<script src="{% static 'js/superfish.min.js' %}"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<!-- Main JS File -->
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
