--- a/products/templates/products/compair.html
+++ b/products/templates/products/compair.html
@@ -1,4 +1,5 @@
 {% extends '_base.html' %}
+{% load humanize %}
 
 {% block title %}
     مقایسه محصولات
@@ -8,17 +9,13 @@
 
     <main class="main">
 
-        <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
-            <div class="container">
-                <h1 class="page-title">مقایسه محصولات 2<span>فروشگاه</span></h1>
-            </div><!-- End .container -->
-        </div><!-- End .page-header -->
+
         <nav aria-label="breadcrumb" class="breadcrumb-nav">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index-1.html">خانه</a></li>
-                    <li class="breadcrumb-item"><a href="#">فروشگاه</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">مقایسه محصولات 2</li>
+                    <li class="breadcrumb-item"><a href="{% url 'product:home' %}">خانه</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'product:products' %}">فروشگاه</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">مقایسه محصولات </li>
                 </ol>
             </div><!-- End .container -->
         </nav><!-- End .breadcrumb-nav -->
@@ -34,7 +31,7 @@
                                 <td class="product-image-title">
                                     <a href="#" class="image"><img src="{{ item.product_obj.cover.url }}"
                                                                    alt="Compare Product"></a>
-                                    <a href="#" class="category">لباس</a>
+                                    <a href="#" class="category">{{ item.product_obj.brand }}</a>
                                     <a href="#" class="title">{{ item.product_obj.title }}</a></td>
                             {% endfor %}
                         </tr>
@@ -49,7 +46,7 @@
                         <tr>
                             <td class="first-column">قیمت</td>
                             {% for item in compair %}
-                                <td class="pro-price">{{ item.product_obj.total_price }} تومان</td>
+                                <td class="pro-price">{{ item.product_obj.total_price|intcomma }} تومان</td>
                             {% endfor %}
                         </tr>
                         <tr>
