--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,34 +66,43 @@
                                     <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                         <div class="product product-7 text-center">
                                             <figure class="product-media">
-                                                <span class="product-label label-new">جدید</span>
+
                                                 <a href="{{ product.get_absolute_url }}">
                                                     <img src="{{ product.cover.url }}" alt="تصویر محصول"
                                                          class="product-image">
                                                 </a>
 
                                                 <div class="product-action-vertical">
-                                                    <a href="#"
+                                                    <a href="{% url 'product:add_favorite_product' product.id %}"
                                                        class="btn-product-icon btn-wishlist btn-expandable"><span>افزودن
                                                             به لیست علاقه مندی</span></a>
-                                                    <a href="popup/quickView.html"
-                                                       class="btn-product-icon btn-quickview"
-                                                       title="مشاهده سریع محصول"><span>مشاهده سریع</span></a>
-                                                    <a href="#" class="btn-product-icon btn-compare"
+
+                                                    <a href="{% url 'product:add_compair' product.id %}" class="btn-product-icon btn-compare"
                                                        title="مقایسه"><span>مقایسه</span></a>
                                                 </div><!-- End .product-action-vertical -->
 
-                                                <div class="product-action">
-                                                    <a href="#" class="btn-product btn-cart"><span>افزودن به
-                                                            سبد خرید</span></a>
-                                                </div><!-- End .product-action -->
+                                                    <form method="POST" action="{% url 'add_cart' product.id %}">
+                                                        {% csrf_token %}
+                                                    <div class="product-action">
+
+                                                        <input type="hidden" name="quantity" id="qty" class="btn-product btn-cart" value="1"
+                                                               min="1"
+                                                               max="30" step="1" data-decimals="0" required>
+                                                        <button type="submit" class="btn-product btn-cart">
+                                                            <span>افزودن به سبد خرید</span>
+                                                        </button>
+                                                    </div><!-- End .product-action -->
+                                                    </form>
+
+{#                                                    <a href="{% url 'add_cart' product.id %}" class="btn-product btn-cart"><span>افزودن به#}
+{#                                                            سبد خرید</span></a>#}
                                             </figure><!-- End .product-media -->
 
                                             <div class="product-body">
                                                 <div class="product-cat text-center">
                                                     <a href="#">{{ product.brand.name }}</a>
                                                 </div><!-- End .product-cat -->
-                                                <h3 class="product-title text-center"><a href="product.html">
+                                                <h3 class="product-title text-center"><a href="{{ product.get_absolute_url }}">
                                                     {{ product.title }}
                                                 </a></h3><!-- End .product-title -->
                                                 <div class="product-price">
@@ -104,7 +113,7 @@
                                                         <div class="ratings-val" style="width: 20%;"></div>
                                                         <!-- End .ratings-val -->
                                                     </div><!-- End .ratings -->
-                                                    <span class="ratings-text">( 2 بازدید )</span>
+                                                    <span class="ratings-text">( {{ views.all.count }} بازدید )</span>
                                                 </div><!-- End .rating-container -->
 
 
@@ -119,22 +128,28 @@
 
                         <nav aria-label="Page navigation">
                             <ul class="pagination justify-content-center">
-                                <li class="page-item disabled">
-                                    <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1"
+                                {% if paginet.has_previous %}
+                                <li class="page-item ">
+                                    <a class="page-link page-link-prev" href="?page={{ paginet.previous_page_number }}" aria-label="Previous" tabindex="-1"
                                        aria-disabled="true">
                                         <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>قبلی
                                     </a>
                                 </li>
-                                <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a>
+
+
+                                <li class="page-item"><a class="page-link" href="?next={{ paginet.previous_page_number }}">{{ paginet.previous_page_number }}</a></li>
+                                {% endif %}
+                                <li class="page-item active" aria-current="page"><a class="page-link" href="?next={{ paginet.number }}">{{ paginet.number }}</a>
                                 </li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item-total">از 6</li>
+
+                                {% if paginet.has_next %}
+                                <li class="page-item"><a class="page-link" href="?next={{ paginet.next_page_number }}">{{ paginet.next_page_number }}</a></li>
                                 <li class="page-item">
-                                    <a class="page-link page-link-next" href="#" aria-label="Next">
+                                    <a class="page-link page-link-next" href="?page={{ paginet.next_page_number }}" aria-label="Next">
                                         بعدی <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>
                                     </a>
                                 </li>
+                                {% endif %}
                             </ul>
                         </nav>
                     </div><!-- End .col-lg-9 -->
@@ -175,7 +190,7 @@
                                 <h3 class="widget-title">
                                     <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true"
                                        aria-controls="widget-2">
-                                        سایز
+
                                     </a>
                                 </h3><!-- End .widget-title -->
 
